examples/mobile-errors/syntax-error/index.jsx
export const broken = ( // missing closing parenthesis
